Fix encoding of reading *.desktop files of Akonadi agents

Explicitly set UTF-8 encoding of QSettings when reading *.desktop
files of agents to prevent any encoding issues. Code parts of string
conversion are also removed as now it's done in QSettings internally.

BUG: 358658
REVIEW: 126911